# oratoria-avaliador

./: .gitignore  README.md  dev.sh  instala.sh  package-lock.json  package.json  pro-installed-manifest.yaml  pro-version.json
.aiox-core/: core-config.yaml  install-manifest.yaml  version.json
.aiox-core/data/: entity-registry.yaml
.aiox/handoffs/: handoff-devops-to-dev-replay-debugging.yaml  handoff-pm-to-sm-2026-04-14-epic7-new-stories.yaml  handoff-po-to-dev-2026-04-14-story-7-6-ready.yaml  handoff-sm-to-po-2026-04-14-story-7-6-validation.yaml
.antigravity/: antigravity.json
.claude/commands/: gui-reginatto.md  gui-reginatto.md.bak
.claude/rules/: behavioral-rules.md
.codex/agents/: vinh-giang.md
.github/workflows/: ci.yaml
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
design/: design-system-resonant-stage.html
docs/: VINH-GIANG-AGENT.md  acceleration-application-kit.md  architecture.md  brief.md  business-playbook.md  competitor-analysis.md  custos-operacionais-producao.md  market-research.md  omie-yoodli-playbook.md  planejamento-custos-producao.html  prd.md  project-brief.md
docs/architecture/: epic-6-architectural-spec.md  practice-mode-spec.md
docs/dev/: convergence-harness.md
docs/qa/: 7.7-rubric-validation.md  calibration-bias-2026-04-18.md  discourse-arc-promotion-2026-05-08.md  gate1-story92-post-deps-install.md  gate2-story91-results.md  gate2-story91-smoke.md  validation-post-deploy-mediapipe-fixes.md
docs/research/: brainstorm-avaliacao-oratoria-ia.md
docs/sales/: 01-calculator-roi.md  02-deck-b2b.md  03-partnership-outreach.md  04-landing-comercial.md
docs/stories/: 1.1.project-scaffolding.story.md  1.2.video-upload.story.md  1.3.video-ingestion.story.md  1.4.processing-status-ui.story.md  10.0.epic-research-driven-improvements.md  3.4.report-rating.story.md  (+59 more)
ml-worker/: .env.example  Dockerfile  app.py  config.py  pyproject.toml  requirements.txt
ml-worker/contracts/: __init__.py  aggregated_metrics.py  dimensions.py  worker_result.py
ml-worker/prompts/: discourse_arc_v1.md
ml-worker/repositories/: __init__.py  analysis_result_repo.py
ml-worker/scripts/: audit_gaze.py  extract_blendshapes.py  replay_eval.py  reprocess_eval.py  smoke_discourse_arc.py  vram_check.py  wavlm_smoke_test.py  wer_benchmark.py
ml-worker/tests/: conftest.py  test_aggregator_story_9_1.py  test_aggregator_truth_contract.py  test_analysis_result_repo.py  test_augmentation_workers_migration.py  test_dimensions.py  test_discourse_arc.py  test_emotion_ml.py  test_facs_blendshape_bridge.py  test_facs_ml.py  test_gesture_semantic.py  test_model_loader.py  test_prosody_extras.py  test_report_generator_truth_contract.py  test_save_analysis_dispatcher.py  test_scoring_workers_migration.py  test_truth_contract_e2e.py  test_variety_analyzer.py  test_voice_analyzer_turbo.py  test_wavlm_emotion.py  test_worker_result_schema.py
ml-worker/workers/: _emotion_ml.py  _facs_blendshape_bridge.py  _facs_ml.py  _frame_sampler.py  _model_loader.py  _prosody_extras.py  _truth_contract_helpers.py  _wavlm_emotion.py  aggregator.py  archetype_classifier.py  articulation_analyzer.py  coaching_plan.py  congruence_analyzer.py  discourse_arc_analyzer.py  facial_analyzer.py  filler_detector.py  gesture_analyzer.py  gesture_semantic_analyzer.py  identity_analyzer.py  opening_analyzer.py  posture_analyzer.py  report_generator.py  storytelling_analyzer.py  temporal_analyzer.py  tonality_analyzer.py  variety_analyzer.py  video_processor.py  voice_analyzer.py
scripts/: compare-ground-truth.py
(+423 files in other folders)
