[project]
name = "oratoria-ml-worker"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
# Story 9.4: prosody deep dive (CPU-only, zero GPU).
# Install via: pip install -e ".[prosody]"
prosody = [
    "opensmile>=2.5",       # eGeMAPS 88 features — padrao afetivo academico
    "pyannote.audio>=3.1",  # Voice Activity Detection — pausas reais
    # librosa ja presente no env — fallback silence-detection sem HF token
]
# Story 9.3: emotion ML (promove tonality 🟡 → 🟢 via Wav2Vec2).
# Install via: pip install -e ".[emotion]"
emotion = [
    "transformers>=4.40",  # Wav2Vec2 + feature extractor
    # torch ja presente via whisper — sem custo extra
]
# Story 9.5: facial FACS — 20 Action Units + 6 emocoes basicas.
# Install via: pip install -e ".[facs]"
facs = [
    "py-feat>=0.7",  # FACS detector SVM CPU-only
    # pandas, scikit-learn, pytorch vem como deps transitivas
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Arquivos com conteúdo de usuário (strings em PT-BR: exercícios, feedback, templates).
# Quebrar essas strings prejudica legibilidade sem benefício — mantemos exemptos de E501.
"workers/report_generator.py" = ["E501"]
"workers/coaching_plan.py" = ["E501"]
"workers/opening_analyzer.py" = ["E501"]
"workers/storytelling_analyzer.py" = ["E501"]
"workers/tonality_analyzer.py" = ["E501"]
"workers/facial_analyzer.py" = ["E501"]
# Story 9.2: initial_prompt PT-BR do Whisper preserva fillers — string contigua.
"workers/voice_analyzer.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
